--- a/user/css/styles.css
+++ b/user/css/styles.css
@@ -1161,7 +1161,7 @@ th {
   text-align: left;
   padding: 0.5rem;
   color: #fff;
-  background-color: var(--black);
+  background-color: var(--green);
   font-weight: normal;
 }
 
@@ -1194,7 +1194,7 @@ td img {
 }
 
 .total-price table {
-  border-top: 3px solid var(--black-gray);
+  border-top: 3px solid var(--green);
   width: 100%;
   max-width: 35rem;
 }
@@ -1209,7 +1209,7 @@ th:last-child {
 
 .checkout {
   display: inline-block;
-  background-color:black;
+  background-color: var(--green);
   color: white;
   padding: 1rem;
   margin-top: 1rem;
@@ -1402,42 +1402,4 @@ th:last-child {
 
 .login-form form p a {
   color: dodgerblue;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 20px;
-}
-.radio-container {
-  margin-bottom: 10px;
-}
-.popup-1 {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 300px;
-  padding: 20px;
-  background-color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  text-align: center;
-}
-.popup-1 p {
-  margin-bottom: 20px;
-}
-.btn-2 {
-  padding: 10px 20px;
-  background-color: black;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-.btn-2:hover:hover {
-  background-color: hsl(115, 100%, 35%);
-}
-.input-container {
-  margin-bottom: 20px;
 }
